--- a/OFFERS-303/ru/index.html
+++ b/OFFERS-303/ru/index.html
@@ -66,7 +66,29 @@
 	</header>
 
 	<main class="main">
-		
+		<section class="sect1">
+
+			<h2 class="center black">
+				Преимущества ванны
+				с радужной бомбочкой
+			</h2>
+			<div class="sect1__main">
+				<div class="sect1__item">
+					<p>Очищает и питает кожу</p>
+				</div>
+				<div class="sect1__item">
+					<p>Обладает тонизирующими и освежающими свойствами</p>
+				</div>
+				<div class="sect1__item">
+					<p>Оказывает релаксирующее действие</p>
+				</div>
+				<div class="sect1__item">
+					<p>Насыщенный аромат сохраняется несколько дней</p>
+				</div>
+			</div>
+			<a href="#offer" class="btn">Заказать</a>
+			<iframe  src="https://www.youtube.com/embed/8M4EJNz1ak4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</section>
 		<section class="sect4">
 			<img src="img/sect4.png" alt="" class="top">
 			<h2 class="center white">Отзывы покупателей</h2>
