--- a/OFFERS-329/index.html
+++ b/OFFERS-329/index.html
@@ -368,7 +368,8 @@ $(document).ready(function(){
                     </div>
                   <div class="scroll">
                         <p><strong>BeautyStamp</strong>  Учимся у <span class="text-pink">@makeup_bymadison</span> как получить безупречные брови за пару мгновений. <span class="text-pink">#ДоИПосле</span>
-                        </p><p><strong>Бровиза3Секунды</strong></p>
+                        </p><p><strong>Бровиза3Секунды</strong> 
+                        <img style="display: block;" src="img/girl2.jpg" alt=""></p>
                         <p class="text-pink">#БровиЗа3Секунды#шикарныеброви#брови#макияж#beautyblog#beauty#красотка#instabeauty#бровигода#макияжзаминуту#косметика#ежедневныймакияж#makeupvideos#контур#зависивыеоткосметики#</p>
                         <p><strong>Kristi.mua.h</strong> о боже, как давно я о таком мечтала </p>
                         <p><strong>Julia_Paris01</strong> <span class="text-pink">@makeup_bymadison</span> как ловко у неё получается, очень интересная штука </p>
@@ -391,6 +392,7 @@ $(document).ready(function(){
                     	 <strong>taniawallerx3</strong>
                         <span class="views">Просмотры: 13 854</span><p></p>
                         <hr style="height:1px; background-color:#f2a3b8; border:0;">
+
                     </div>
                   <div class="scroll">
                           <p><strong>taniawallerx3</strong> Накрасить брови в считанные секунды?! Это самая длительная часть моего ежедневного макияжа, наконец то это в прошлом))) благодаря <span class="text-pink">@BeautyStamp</span>! Это было очень просто  и результат сохранился на весь день. Я просто отпечатала штамп в замечательной пудре, приложила поверх бровей , подчеркнула края консилером и Вуаля, всё готово.<span class="text-pink"> #большаярадость#нелюблюдолгиемакияжи#идеальныеброви#бровиза3секунды#</span> </p>
