--- a/OFFERS-303/ru/index.html
+++ b/OFFERS-303/ru/index.html
@@ -87,7 +87,14 @@
 				</div>
 			</div>
 			<a href="#offer" class="btn">Заказать</a>
+			<br>
 			<iframe  src="https://www.youtube.com/embed/8M4EJNz1ak4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</section>
+		<section class="sect2">
+			<h2 class="center black">
+				Настоящая спа-процедура у вас дома!
+			</h2>
+			<img src="img/sect2.png" alt="">
 		</section>
 		<section class="sect4">
 			<img src="img/sect4.png" alt="" class="top">
