--- a/OFFERS-303/ru/index.html
+++ b/OFFERS-303/ru/index.html
@@ -95,16 +95,65 @@
 				Настоящая спа-процедура у вас дома!
 			</h2>
 			<img src="img/sect2.png" alt="">
+			<p>
+				<b>Радужная бомбочка</b> превратит вашу ванную комнату в небольшой spa-салон. <b>Эфирные масла бережно очищают, увлажняют  и тонизируют кожу,</b> совершенно не вызывая раздражения или покраснения. Яркий многоцветный дизайн, приятный аромат, красивый цвет воды подарят ощущение внутренней свободы, улучшат настроение, <b>снимет стресс и уберет усталость.</b>
+			</p>
+		</section>
+		<section class="sect3">
+			<h2 class="center t-white">
+				Для тех людей, кто любит принимать ванну с комфортом!
+			</h2>
+			<div class="sect3__main grid">
+				<div class="sect3__item">
+					<img src="img/sect3-1.svg" alt="">
+<p>После рабочего дня</p>
+				</div>
+				<div class="sect3__item">
+					<img src="img/sect3-2.svg" alt="">
+					<p>Романтичный вечер</p>
+				</div>
+				<div class="sect3__item">
+					<img src="img/sect3-3.svg" alt="">
+					<p>Для поднятия настроения</p>
+				</div>
+				<div class="sect3__item">
+					<img src="img/sect3-4.svg" alt="">
+					<p>Для детей</p>
+				</div>
+			</div>
 		</section>
 		<section class="sect4">
-			<img src="img/sect4.png" alt="" class="top">
+			<h2 class="center black">
+				Для тех людей, кто любит принимать ванну с комфортом!
+			</h2>
+			<div class="sect4__main grid">
+				<div class="sect4__item">
+					<img src="img/sect4-1.png" alt="">
+<p>После рабочего дня</p>
+				</div>
+				<div class="sect4__item">
+					<img src="img/sect4-2.png" alt="">
+					<p>Романтичный вечер</p>
+				</div>
+				<div class="sect4__item">
+					<img src="img/sect4-3.png" alt="">
+					<p>Для поднятия настроения</p>
+				</div>
+				<div class="sect4__item">
+					<img src="img/sect4-4.png" alt="">
+					<p>Для детей</p>
+				</div>
+			</div>
+		</section>
+		<section class="sect5">
+			<img src="img/sect5.png" alt="" class="top">
 			<h2 class="center white">Отзывы покупателей</h2>
 			<div class="reviews owl-carousel">
 
 				<div class="reviews__item">
 					<div class="reviews__top">
 						<img src="img/ava_1.png" alt="" class="ava">
-						<p><b>Anna K.</b><img src="img/sect4.svg" alt="" class="rating"></p>
+						<p><b>Anna K.</b><img src="img/sect5.svg" alt="" class="rating"></p>
 					</div>
 					<img src="img/comment_1.jpg" alt="">
 					<br>
@@ -118,7 +167,7 @@
 				<div class="reviews__item">
 					<div class="reviews__top">
 						<img src="img/ava_2.png" alt="" class="ava">
-						<p><b>Igor K.</b><img src="img/sect4.svg" alt="" class="rating"></p>
+						<p><b>Igor K.</b><img src="img/sect5.svg" alt="" class="rating"></p>
 					</div>
 					<img src="img/comment_2.jpg" alt="">
 					<br>
@@ -131,7 +180,7 @@
 				<div class="reviews__item">
 					<div class="reviews__top">
 						<img src="img/ava_3.png" alt="" class="ava">
-						<p><b>Christina K..</b><img src="img/sect4.svg" alt="" class="rating"></p>
+						<p><b>Christina K..</b><img src="img/sect5.svg" alt="" class="rating"></p>
 					</div>
 					<img src="img/comment_3.jpg" alt="">
 					<br>
