--- a/OFFERS-303/ru/index.html
+++ b/OFFERS-303/ru/index.html
@@ -3,11 +3,13 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Personal Air Purifier Necklace</title>
-	<meta property="og:image" content="path/to/image.jpg" />
+	<title>Бомба для ванной "Радуга"</title>
+<meta property="og:title" content="Бомба для ванной Радуга"/>
+<meta property="og:description" content="с эфирными маслами"/>
+<meta property="og:image" content="https://i.imgur.com/BtPJG1a.png"/>
+<meta property="og:type" content="website"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="icon" href="img/favicon/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png" />
+	<link rel="icon" href="img/favicon/favicon.png" />
 	<meta name="theme-color" content="#000" />
 	<link rel="stylesheet" href="libs/carousel/owl.carousel.min.css" />
 	<link rel="stylesheet" href="styles/css/main.css" />
@@ -28,7 +30,7 @@
 				<h2 class="left intro__title margin-left">Бомба для ванной "Радуга"
 					с эфирными маслами
 				</h2>
-				<div class="subtitle">Лучший помощник при уборке и переезде</div>
+				<div class="subtitle">00000</div>
 			</div>
 			<div class="triger">
 				<p>Хит 2021 <br> года!</p>
@@ -36,17 +38,17 @@
 			</div>
 			<div class="prod">
 				<p class="sale">
-					<b>40%</b>
+					<b>50%</b>
 					скидка
 				</p>
 				<div class="price">
 					<div class="old">
 						<span>Обычная цена</span>
-						<s>2600 руб</s>
+						<s>98 €</s>
 					</div>
 					<div class="new">
 						<span>Цена сегодня</span>
-						<b>1550 руб</b>
+						<b>49 €</b>
 					</div>
 				</div>
 			</div>
@@ -88,7 +90,9 @@
 			</div>
 			<a href="#offer" class="btn">Заказать</a>
 			<br>
-			<iframe  src="https://www.youtube.com/embed/8M4EJNz1ak4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/YggmWbzhK50" title="YouTube video player" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</section>
 		<section class="sect2">
 			<h2 class="center black">
@@ -96,7 +100,10 @@
 			</h2>
 			<img src="img/sect2.png" alt="">
 			<p>
-				<b>Радужная бомбочка</b> превратит вашу ванную комнату в небольшой spa-салон. <b>Эфирные масла бережно очищают, увлажняют  и тонизируют кожу,</b> совершенно не вызывая раздражения или покраснения. Яркий многоцветный дизайн, приятный аромат, красивый цвет воды подарят ощущение внутренней свободы, улучшат настроение, <b>снимет стресс и уберет усталость.</b>
+				<b>Радужная бомбочка</b> превратит вашу ванную комнату в небольшой spa-салон. <b>Эфирные масла бережно
+					очищают, увлажняют и тонизируют кожу,</b> совершенно не вызывая раздражения или покраснения. Яркий
+				многоцветный дизайн, приятный аромат, красивый цвет воды подарят ощущение внутренней свободы, улучшат
+				настроение, <b>снимет стресс и уберет усталость.</b>
 			</p>
 		</section>
 		<section class="sect3">
@@ -106,7 +113,7 @@
 			<div class="sect3__main grid">
 				<div class="sect3__item">
 					<img src="img/sect3-1.svg" alt="">
-<p>После рабочего дня</p>
+					<p>После рабочего дня</p>
 				</div>
 				<div class="sect3__item">
 					<img src="img/sect3-2.svg" alt="">
@@ -129,7 +136,7 @@
 			<div class="sect4__main grid">
 				<div class="sect4__item">
 					<img src="img/sect4-1.png" alt="">
-<p>После рабочего дня</p>
+					<p>После рабочего дня</p>
 				</div>
 				<div class="sect4__item">
 					<img src="img/sect4-2.png" alt="">
@@ -146,111 +153,110 @@
 			</div>
 		</section>
 		<section class="sect5">
-			<img src="img/sect5.png" alt="" class="top">
-			<h2 class="center white">Отзывы покупателей</h2>
+			<h2 class="center black">Отзывы покупателей</h2>
 			<div class="reviews owl-carousel">
 
 				<div class="reviews__item">
 					<div class="reviews__top">
+						После сложного рабочего дня очень люблю полежать в ванне, для меня это некий релакс. А с
+						радужной бомбочкой, я получаю двойное удовольствие. Мне очень нравятся бомбочкас радугой, у неё
+						и аромат приятный, и состав натуральный, не красят ванну, естественно и кожу. По цене не дорого,
+						пользуюсь ими раза 3-4 в неделю, для расслабления и ухода за кожей просто отлично!
+					</div>
+					<div class="reviews__bottom">
 						<img src="img/ava_1.png" alt="" class="ava">
-						<p><b>Anna K.</b><img src="img/sect5.svg" alt="" class="rating"></p>
-					</div>
-					<img src="img/comment_1.jpg" alt="">
-					<br>
-					<div class="reviews__text">
-						Мы все в восторге! Рисуем всей семьей. Если ищете крутой подарок на День Рождения или Рождество
-						– выбирайте
-						набор Light
-						Drawing!
+						<p><b>Александра 31 год</b> <span>
+								6 дней назад
+							</span></p>
+						<br>
+
 					</div>
 				</div>
 				<div class="reviews__item">
 					<div class="reviews__top">
+						Шикарная бомбочка для ванны! Легкий приятный аромат, прекрасное увлажнение, а вода окрашивается
+						в настоящую радугу! Загляденье просто! Рекомендую!
+					</div>
+					<div class="reviews__bottom">
 						<img src="img/ava_2.png" alt="" class="ava">
-						<p><b>Igor K.</b><img src="img/sect5.svg" alt="" class="rating"></p>
-					</div>
-					<img src="img/comment_2.jpg" alt="">
-					<br>
-					<div class="reviews__text">
-						В восторге не только ребенок, но и родители! Планшет для рисования светом отличный способ
-						успокоить ребенка
-						перед сном.
+						<p><b>Виолетта, 22 года</b> <span>
+								1 день назад
+							</span></p>
+						<br>
+
 					</div>
 				</div>
 				<div class="reviews__item">
 					<div class="reviews__top">
-						<img src="img/ava_3.png" alt="" class="ava">
-						<p><b>Christina K..</b><img src="img/sect5.svg" alt="" class="rating"></p>
+						Ребенок в восторге! Заказывала ребенку, она у меня не любит мыться, уже не знаю чем завлечь.
+						Предложила дочурке искупаться в настоящей радуге, восторгу небыло предела! Заказала ещё!
+						Отдельное спасибо за быструю доставку!
 					</div>
-					<img src="img/comment_3.jpg" alt="">
-					<br>
-					<div class="reviews__text">
-						Спасибо Вам за возможность порадовать сына чудесным подарком! Качество классной, все сделано на
-						совесть.
-						Набор нам
-						настолько понравился, что оторваться не можем.
+					<div class="reviews__bottom">
+						<img src="img/ava_3.png" alt="" class="ava">
+						<p><b>Ольга, 29 лет</b> <span>
+								5 дней назад
+							</span></p>
+						<br>
+
 					</div>
 				</div>
 			</div>
 		</section>
 		<br>
 		</section>
-		<section class="sect5">
-			<img src="img/abcol_2.png" alt="" class="candy candy--10">
-			<img src="img/abcol_5.png" alt="" class="candy candy--11">
-			<h2 class="center white oswald">Как сделать заказ?</h2>
-			<div class="sect5__main">
-				<div class="box">
-					<div class="sect5__item">
-						<img src="img/sect5_1.svg" alt="">
-						<p>Оставьте заявку
-						</p>
-					</div>
-					<div class="sect5__item">
-						<img src="img/sect5_2.svg" alt="">
-						<p>Дождитесь звонка менеджера
-						</p>
-					</div>
-					<div class="sect5__item">
-						<img src="img/sect5_3.svg" alt="">
-						<p>Оплатите при получении
-						</p>
+		<section class="sect6">
+			<h2 class="center t-white">Как заказать?</h2>
+			<div class="sect6__main">
+				<div class="sect6__item">
+					<div class="top"><img src="img/sect6_1.svg" alt=""> <b> Шаг 1</b></div>
+					<p>Вы оставляете заявку на нашем сайте
 
-					</div>
+					</p>
 				</div>
-				<img src="img/prod.png" alt="" class="prod">
+				<div class="sect6__item">
+					<div class="top"><img src="img/sect6_2.svg" alt=""> <b> Шаг 2</b></div>
+					<p>Менеджер связывается с Вами для оформления заказа
+					</p>
+				</div>
+				<div class="sect6__item">
+					<div class="top"><img src="img/sect6_3.svg" alt=""> <b> Шаг 3</b></div>
+					<p>Заказ доставляется курьеров в течение 1-3 дней
+					</p>
+				</div>
+				<div class="sect6__item">
+					<div class="top"><img src="img/sect6_4.svg" alt=""> <b> Шаг 4</b></div>
+					<p>Вы оплачиваете заказ при получении
+					</p>
+				</div>
 			</div>
 		</section>
 		<footer class="intro">
-			<div class="intro__triger">
-				<p class="oswald oswald--1">christmas</p>
-				<p class="oswald oswald--2">Discount</p>
-			</div>
-			<div class="intro__top">
+			<div class="intro__main">
 
 				<div class="intro__text">
-					<h2 class="left intro__title margin-left anim">Light Drawing</h2>
-					<div class="subtitle">Набор для рисования и творчества</div>
-					<div class="list">
-						<div class="list__item"><img src="img/list.svg" alt="">
-							<p>Развитие фантазии</p>
-						</div>
-						<div class="list__item"><img src="img/list.svg" alt="">
-							<p>Совместный досуг</p>
-						</div>
-						<div class="list__item"><img src="img/list.svg" alt="">
-							<p>Избавление от страха темноты
-							</p>
-						</div>
-					</div>
+					<h2 class="left intro__title margin-left">Бомба для ванной "Радуга"
+						с эфирными маслами
+					</h2>
+					<div class="subtitle">00000</div>
 				</div>
-
-			</div>
-			<div class="intro__bott">
-				<div class="price margin-left">
-					<div class="price__box">
-						<div class="price__text"><span>Новая цена</span>
-							<p><b>49€</b> <s>98€</s></p>
+				<div class="triger">
+					<p>Хит 2021 <br> года!</p>
+					<img src="img/triger.svg" alt="">
+				</div>
+				<div class="prod">
+					<p class="sale">
+						<b>50%</b>
+						скидка
+					</p>
+					<div class="price">
+						<div class="old">
+							<span>Обычная цена</span>
+							<s>98 €</s>
+						</div>
+						<div class="new">
+							<span>Цена сегодня</span>
+							<b>49 €</b>
 						</div>
 					</div>
 				</div>
@@ -262,15 +268,21 @@
 					<div class="input-wrap">
 						<input type="text" name="phone" required placeholder="Ваш номер телефона">
 					</div>
-					<button class="btn">купить</button>
+<input name="offer_id" type="hidden" value="{offer_id}">
+<input name="geo" type="hidden" value="">
+<input name="web_id" type="hidden" value="{web_id}">
+<input name="click_id" type="hidden" value="{click_id}">
+<input name="time_zone" type="hidden" value="+3">
+<input name="lang" type="hidden" value="RU">
+					<button class="btn">Заказать</button>
 				</form>
-			</div>
 
+			</div>
 		</footer>
 
 		<div class="policy__bot">
 			<div class="policy_wrap">
-				<span>GADGET SHOP,Leof. Stratou, 56533, Thessaloniki, Greece</span>
+				<span>HOME GOODS LTD.</span>
 				<a href="/privacypolicy" target="_blank">Privacy policy</a>
 				<a href="/general-conditions-of-sale" target="_blank">General conditions of sale</a>
 				<a href="/legal-warning" target="_blank">Legal warning</a>
@@ -300,6 +312,26 @@
 				}
 			}
 		</script>
+		
+<script type="text/javascript" src="/libs/js/common.js"></script>
+<script>
+    $(document).ready(function() {
+        $.init({
+
+            priceSelector: ".new-cost",
+            oldPriceSelector: ".old-cost",
+            reportFormSelector: ".report-abuse__form",
+            reportCallback: function (data) {
+                console.log('ReportCallback:', data);
+            },
+            callback: function() {
+                console.log("Do something after prices changing");
+
+            }
+        });
+    });
+</script>
+		
 </body>
 
 </html>
