--- a/OFFERS-329/pt/index.html
+++ b/OFFERS-329/pt/index.html
@@ -142,9 +142,9 @@
                 <h2> Encomende já!</h2>
                 <div class="price"><span class="old-price">
                         <x-oldprice> 76</x-oldprice>
-                        <x-currency> €</x-currency> undefined</span>
+                        <x-currency> €</x-currency> </span>
                     <x-newprice> 38</x-newprice>
-                    <x-currency> €</x-currency> undefined</div>
+                    <x-currency> €</x-currency> </div>
             </div>
             <form action method="post" class="order-form">
                 <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -152,7 +152,7 @@
 
                 <input type="text" name="name" id="name" placeholder="Ваше имя">
                 <input type="text" name="phone" id="phone" placeholder="Ваш телефон">
-                <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Заказать"></div>
+                <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" Encomendar"></div>
             </form>
         </div>
 
@@ -173,9 +173,9 @@
                         <h2> Faça já o seu pedido!</h2>
                         <div class="price"><span class="old-price">
                                 <x-oldprice> 76</x-oldprice>
-                                <x-currency> €</x-currency> undefined</span>
+                                <x-currency> €</x-currency></span>
                             <x-newprice> 38</x-newprice>
-                            <x-currency> €</x-currency> undefined</div>
+                            <x-currency> €</x-currency></div>
                     </div>
                     <form action method="post" class="order-form">
                         <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -183,7 +183,7 @@
 
                         <input type="text" name="name" id="name" placeholder="Ваше имя">
                         <input type="text" name="phone" id="phone" placeholder="Ваш телефон">
-                        <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Заказать"></div>
+                        <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" Encomendar"></div>
                     </form>
                 </div>
 
@@ -465,9 +465,9 @@
                             <div class="price">
                                 <span class="old-price">
                                     <x-oldprice> 76</x-oldprice>
-                                    <x-currency> €</x-currency> undefined</span>
+                                    <x-currency> €</x-currency></span>
                                 <x-newprice> 38</x-newprice>
-                                <x-currency> €</x-currency> undefined</div>
+                                <x-currency> €</x-currency></div>
                         </div>
                         <form action method="post" class="order-form">
                             <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -475,7 +475,7 @@
 
                             <input type="text" name="name" id="name" placeholder="Ваше имя">
                             <input type="text" name="phone" id="phone" placeholder="Ваш телефон">
-                            <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Заказать"></div>
+                            <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Encomendar"></div>
                         </form>
                     </div>
                 </div>
