--- a/OFFERS-329/gr/index.html
+++ b/OFFERS-329/gr/index.html
@@ -150,8 +150,8 @@
                 <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
 
 
-                <input type="text" name="name" id="name" placeholder="Ονοματεπώνυμο ">
-                <input type="text" name="phone" id="phone" placeholder="Τηλέφωνο ">
+                <input type="text" name="name" id="name" placeholder="ΟΝΟΜΑΤΕΠΩΝΥΜΟ ">
+                <input type="text" name="phone" id="phone" placeholder="ΤΗΛΕΦΩΝΟ">
                 <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" ΠΑΡΑΓΓΕΙΛΕΤΕ "></div>
             </form>
         </div>
@@ -162,8 +162,8 @@
     <header>
         <div class="container">
             <div class="top-col">
-                <div class="top-text-black"> Τα ιδανικά σας φρύδια </div>
-                <div class="top-text-big text-pink"> σε τρία δευτερόλεπτα!</div>
+                <div class="top-text-black"> ΙΔΑΝΙΚΑ ΦΡΥΔΙΑ</div>
+                <div class="top-text-big text-pink"> ΣΕ ΤΡΙΑ ΔΕΥΤΕΡΟΛΕΠΤΑ!</div>
                 <div class="top-text-p"> Έχετε κουραστεί να καταπολεμάτε την ατέλεια των φρυδιών σας κάθε μέρα; Έχετε κουραστεί να σχεδιάζετε ακόμη και γωνίες κάθε πρωί ξανά και ξανά; Δεν χρειάζεται πλέον να ξοδεύετε πολύ χρόνο σε αυτό:<strong> τρία δευτερόλεπτα και είναι έτοιμα!</strong></div> <br>
                 <div class="product-img"><img src="img/product-img-mob.jpg"></div>
                 <br><br>
@@ -181,8 +181,8 @@
                         <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
 
 
-                        <input type="text" name="name" id="name" placeholder="Ονοματεπώνυμο ">
-                        <input type="text" name="phone" id="phone" placeholder="Τηλέφωνο ">
+                        <input type="text" name="name" id="name" placeholder="ΟΝΟΜΑΤΕΠΩΝΥΜΟ ">
+                        <input type="text" name="phone" id="phone" placeholder="ΤΗΛΕΦΩΝΟ">
                         <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" ΠΑΡΑΓΓΕΙΛΕΤΕ "></div>
                     </form>
                 </div>
@@ -199,7 +199,7 @@
             <div class="row">
                 <div class="col m6">
                     <div class="space1">
-                        <h1> Σας παρουσιάζουμε τις στάμπες φρυδιών:</h1>
+                        <h1> ΣΑΣ ΠΑΡΟΥΣΙΑΖΟΥΜΕ ΤΙΣ ΣΤΑΜΠΕΣ ΦΡΥΔΙΩΝ:</h1>
                         <p> Συμπαγές σετ που αποτελείται από πούδρα και εύχρηστες στάμπες.</p>
                         <img src="img/product-img1.jpg" id="product-img1">
                     </div>
@@ -216,30 +216,30 @@
             <div class="row">
                 <div class="col s12">
                     <center>
-                        <h1> Γιατί οι στάμπες <br><span class="text-pink"> «Eyebrow Beauty Stamp»</span> <br> Είναι τόσο δημοφιλές;</h1>
+                        <h1> ΓΙΑΤΙ ΟΙ ΣΤΑΜΠΕΣ<br><span class="text-pink"> «Eyebrow Beauty Stamp»</span> <br> ΕΙΝΑΙ ΤΟΣΟ ΔΗΜΟΦΙΛΕΣ;</h1>
                         <p> Έχουν ακριβώς αυτό που χρειάζεστε:</p>
                     </center>
                 </div>
                 <center>
                     <div class="boxes">
                         <div class="circle"><i class="icon-shade"></i></div>
-                        <p class="circle-title"> Ιδανική απόχρωση της πούδρας</p>
+                        <p class="circle-title"> ΙΔΑΝΙΚΗ ΑΠΟΧΡΩΣΗ ΤΗΣ ΠΟΥΔΡΑΣ</p>
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-closed-eyes-with-lashes-and-brows"></i></div>
-                        <p class="circle-title"> Φυσικό αποτέλεσμα καλοσχεδιασμένων φρυδιών</p>
+                        <p class="circle-title"> ΦΥΣΙΚΟ ΑΠΟΤΕΛΕΣΜΑ ΚΑΛΟΣΧΕΔΙΑΣΜΕΝΩΝ ΦΡΥΔΙΩΝ </p>
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-raindrop"></i></div>
-                        <p class="circle-title"> Αδιάβροχο<br> Πούδρα </p>
+                        <p class="circle-title"> ΑΔΙΑΒΡΟΧΟ<br> ΠΟΥΔΡΑ</p>
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-time"></i></div>
-                        <p class="circle-title"> Κρατάει 24 ώρες <br> Το 24-ωρο</p>
+                        <p class="circle-title"> ΚΡΑΤΑΕΙ 24 ΩΡΕΣ<br> ΤΟ 24ΩΡΟ</p>
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-good"></i></div>
-                        <p class="circle-title"> Ανώδυνη και απλή εφαρμογή</p>
+                        <p class="circle-title"> ΑΝΩΔΥΝΗ ΚΑΙ ΑΠΛΗ ΕΦΑΡΜΟΓΗ</p>
                     </div>
                 </center>
 
@@ -253,7 +253,7 @@
                 <div class="col s12">
                     <center>
                         <div class="float-box">
-                            <h3> Αγοράστε τις στάμπες "Eyebrow Beauty Stamp" κερδοφόρα τώρα</h3>
+                            <h3> ΑΓΟΡΑΣΤΕ ΤΙΣ ΣΤΑΜΠΕΣ "Eyebrow Beauty Stamp" ΚΕΡΔΟΦΟΡΑ ΤΩΡΑ</h3>
                         </div>
                         <div class="float-box">
                             <div class="btn order"><span> ΠΑΡΑΓΓΕΙΛΕΤΕ </span></div>
@@ -270,7 +270,7 @@
             <div class="row">
                 <div class="col s12"><br><br>
                     <center>
-                        <h1 class="text-white"> Πώς χρησιμοποιούνται;</h1>
+                        <h1 class="text-white"> ΠΩΣ ΧΡΗΣΙΜΟΠΟΙΟΥΝΤΑΙ;</h1>
                     </center>
                 </div>
 
@@ -293,7 +293,7 @@
 
                 <div class="col s12"><br><br>
                     <center>
-                        <h1 class="text-white"> Πώς λειτουργεί <span class="text-pink"> «Eyebrow Beauty Stamp»?</span>
+                        <h1 class="text-white"> ΠΩΣ ΛΕΙΤΟΥΡΓΕΙ<span class="text-pink"> «Eyebrow Beauty Stamp»;</span>
                         </h1>
                     </center>
                 </div>
@@ -322,7 +322,7 @@
             <div class="col s12">
                 <center>
                     <div class="float-box">
-                        <h3> Αγοράστε «Eyebrow Beauty Stamp»</h3>
+                        <h3> ΑΓΟΡΑΣΤΕ «Eyebrow Beauty Stamp»</h3>
                     </div>
                     <div class="float-box">
                         <div class="btn order"><span> ΠΑΡΑΓΓΕΙΛΕΤΕ </span></div>
@@ -358,7 +358,7 @@
         <div class="container">
 
             <center>
-                <h1 class="text-pink"> Κριτικές Πελατών:</h1>
+                <h1 class="text-pink"> ΚΡΙΤΙΚΕΣ ΠΕΛΑΤΩΝ:</h1>
             </center> <br>
             <div class="owl-carousel owl-theme">
                 <div class="item">
@@ -426,7 +426,7 @@
                                 <hr style="height:1px; background-color:#f2a3b8; border:0;">
                             </div>
                             <div class="scroll">
-                                <p><strong> Mariya_schastie99</strong> Μόλις παρέλαβα και βιάζομαι να μοιραστώ μαζί σας!<span class="text-pink"> @BeautyStamp</span> Είναι σίγουρα η τέλεια λύση για καθημερινή χρήση, ειδικά όταν ο χρόνος είναι περιορισμένος. Είμαι σίγουρα εντυπωσιασμένη. Παρακολουθήστε το βίντεό μου, τοποθετήστε το και μην χάνετε χρόνο, παραγγείλετε όσο υπάρχει προσφορά! </p>
+                                <p><strong> Mariya_schastie99</strong> Μόλις παρέλαβα και βιάζομαι να μοιραστώ μαζί σας!<span class="text-pink"> @BeautyStamp</span> Είναι σίγουρα η τέλεια λύση για καθημερινή χρήση, ειδικά όταν ο χρόνος είναι περιορισμένος. Είμαι σίγουρα εντυπωσιασμένη. Παρακολουθήστε το βίντεό μου, τοποθετήστε το και μην χάνετε χρόνο, παραγγείλετε όσο υπάρχει προσφορά!<img src="img/img4.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt> </p>
                                 <p><strong> mariia0684</strong> <span class="text-pink"> @Mariya_schastie99</span> Ομορφιά! Είσαι όπως πάντα στην κορυφή, και όπως πάντα βρίσκεις εξαιρετικές προσφορές</p>
                                 <p><strong> dariondraten1</strong> Photoshop</p>
                                 <p><strong> kris0301</strong> Mariya Είσαι η βασίλισσα των φρυδιών. Καταπληκτικό προϊόν. </p>
@@ -473,8 +473,8 @@
                             <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
 
 
-                            <input type="text" name="name" id="name" placeholder="Ονοματεπώνυμο ">
-                            <input type="text" name="phone" id="phone" placeholder="Τηλέφωνο ">
+                            <input type="text" name="name" id="name" placeholder="ΟΝΟΜΑΤΕΠΩΝΥΜΟ ">
+                            <input type="text" name="phone" id="phone" placeholder="ΤΗΛΕΦΩΝΟ">
                             <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" ΠΑΡΑΓΓΕΙΛΕΤΕ "></div>
                         </form>
                     </div>
@@ -484,7 +484,7 @@
         </div>
         <center>
             <p> BEAUT-E SHOP,</p>
-            <p> Leof. Stratou, 56533, Thessaloniki, Greece</p>
+            <p> Calle Virgen del Espino, 17, 28027 Madrid, Spain</p>
             <a href="/privacypolicy" target="_blank"> Privacy policy</a>  <br>
             <a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>  <br>
             <a href="/legal-warning" target="_blank"> Legal warning</a>
