--- a/OFFERS-329/gr/index.html
+++ b/OFFERS-329/gr/index.html
@@ -94,6 +94,8 @@
     <link rel="stylesheet" href="css/style1.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link href="css/css.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script>
