--- a/OFFERS-329/gr/index.html
+++ b/OFFERS-329/gr/index.html
@@ -428,7 +428,7 @@
                                 <hr style="height:1px; background-color:#f2a3b8; border:0;">
                             </div>
                             <div class="scroll">
-                                <p><strong> Mariya_schastie99</strong> Μόλις παρέλαβα και βιάζομαι να μοιραστώ μαζί σας!<span class="text-pink"> @BeautyStamp</span> Είναι σίγουρα η τέλεια λύση για καθημερινή χρήση, ειδικά όταν ο χρόνος είναι περιορισμένος. Είμαι σίγουρα εντυπωσιασμένη. Παρακολουθήστε το βίντεό μου, τοποθετήστε το και μην χάνετε χρόνο, παραγγείλετε όσο υπάρχει προσφορά!<img src="img/img4.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt> </p>
+                                <p><strong> Mariya_schastie99</strong> Μόλις παρέλαβα και βιάζομαι να μοιραστώ μαζί σας!<span class="text-pink"> @BeautyStamp</span> Είναι σίγουρα η τέλεια λύση για καθημερινή χρήση, ειδικά όταν ο χρόνος είναι περιορισμένος. Είμαι σίγουρα εντυπωσιασμένη. Παρακολουθήστε το βίντεό μου, τοποθετήστε το και μην χάνετε χρόνο, παραγγείλετε όσο υπάρχει προσφορά!</p>
                                 <p><strong> mariia0684</strong> <span class="text-pink"> @Mariya_schastie99</span> Ομορφιά! Είσαι όπως πάντα στην κορυφή, και όπως πάντα βρίσκεις εξαιρετικές προσφορές</p>
                                 <p><strong> dariondraten1</strong> Photoshop</p>
                                 <p><strong> kris0301</strong> Mariya Είσαι η βασίλισσα των φρυδιών. Καταπληκτικό προϊόν. </p>
