--- a/OFFERS-338/ru/index.html
+++ b/OFFERS-338/ru/index.html
@@ -11,10 +11,8 @@
 	<meta name="theme-color" content="#000" />
 	<link rel="stylesheet" href="libs/carousel/owl.carousel.min.css" />
 	<link rel="stylesheet" href="styles/css/main.css" />
-	<link
-		href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap"
-		rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
@@ -22,98 +20,78 @@
 
 	<header class="intro">
 		<div class="intro__header">
-			<div class="box">
-				<h2 class="intro__title big left Montser">
-					Элайнеры Hollywood smile
-				</h2>
-				<p class="intro__subtitle roboto">Съемные капы для
-					коррекции зубов
+			<div class="name">
+				<p class="subtitle">Универсальные съемные виниры
 				</p>
+				<h2 class="title">Shiny Dentes
+				</h2>
 			</div>
-			<div class="price price--intro">
-
-				<b class="old">98€</b>
-				<b class="nev">49€</b>
-				<p>Цена со скидкой</p>
-
+			<div class="prod">
+				<p class="text">Идеальная белоснежная улыбка одним движением!</p>
+				<div class="price">	<b class="nev">49€</b>
+					<b class="old">98€</b>
+				
+				</div>
 			</div>
-
 		</div>
-		<img src="img/intro__footer.png" alt="" style="margin-top: -1.86rem; position: relative; ">
-		<div class="intro__footer">
-			<div class="top">
-				<div class="item">
-					<p> <img src="img/intro__footer_list.svg" alt=""> Комфортные
-					</p>
-					<p> <img src="img/intro__footer_list.svg" alt="">Гипоаллергенные
 
-					</p>
-					<p><img src="img/intro__footer_list.svg" alt=""> Быстрый результат
-					</p>
-				</div>
-				<img src="img/prod.png" alt="" style=" width: 2.2rem;">
+		<div class="list">
+			<div class="list__item">
+				<p>Тонкие и удобные </p>
 			</div>
-			<div class="timer ">
-
-				<div class="timer__wrapper">
-					<div class="t-hour"></div>
-					<div class="separator">
-						:
-					</div>
-					<div class="t-min"></div>
-					<div class="separator">
-						:
-					</div>
-					<div class="t-sec"></div>
-				</div>
-				<h3 class="timer__title">По акции осталось <b>12</b> шт</h3>
+			<div class="list__item">
+				<p>Универсальный размер</p>
+			</div>
+			<div class="list__item">
+				<p>Гипоаллергенные </p>
+			</div>
+			<div class="list__item">
+				<p>Прочный фиксатор </p>
 			</div>
 		</div>
 		<br>
 		<a href="#offer" class="btn">Заказать</a>
+		<br>
+		<div class="trigger">
+			Осталось товара по акции: <b>19 шт</b>
+		</div>
 		<br><br>
 	</header>
 
 	<main class="main">
 		<section class="sect1">
-			<h2 class=" sect1__title ">Лучшее решения при таких недостатках как:</h2>
+			<h2 class=" sect-title">Основные преимущества <b>shini dente</b></h2>
 			<div class="sect1__item">
-				<img src="img/sect_1.png" alt="">
-				<div class="box">
-					<b>Промежутки между зубами</b>
-					<img src="img/sect1_str.svg" alt="">
-				</div>
+				<img src="img/sect1-1.png" alt="">
+				<p><b>Быстрые результаты</b>Мгновенное улучшение внешнего вида ваших зубов</p>
 			</div>
 			<div class="sect1__item">
-				<img src="img/sect_2.png" alt="">
-				<div class="box">
-					<b>Скученность
-						зубов</b>
-					<img src="img/sect1_str.svg" alt="">
-				</div>
+				<img src="img/sect1-2.png" alt="">
+				<p><b>Легко использовать</b>Одевайте и снимайте, когда захотите.</p>
 			</div>
 			<div class="sect1__item">
-				<img src="img/sect_3.png" alt="">
-				<div class="box">
-					<b>Неправильный
-						прикус</b>
-					<img src="img/sect1_str.svg" alt="">
-				</div>
+				<img src="img/sect1-3.png" alt="">
+				<p><b>Удобно носить</b>Высокотехнологичный стоматологический материал невероятно тонкий, но при этом чрезвычайно прочный и долговечный. </p>
 			</div>
 			<div class="sect1__item">
-				<img src="img/sect_4.png" alt="">
-				<div class="box">
-					<b>Повороты
-						и наклоны зубов</b>
-					<img src="img/sect1_str.svg" alt="">
-				</div>
+				<img src="img/sect1-4.png" alt="">
+				<p><b>Экономичное решение</b>Более доступное, чем другие косметические процедуры.</p>
+			</div>
+			<div class="sect1__item">
+				<img src="img/sect1-5.png" alt="">
+				<p><b>Многофункциональные</b>Замаскируйте свои недостатки, такие как не ровные зубу, сколы, трещены, большие щели, кариес и темную эмаль.</p>
+			</div>
+			<div class="sect1__item">
+				<img src="img/sect1-6.png" alt="">
+				<p><b>Временные меры</b>mmm</p>
 			</div>
 		</section>
 
 		<section class="sect2">
 			<h2 class=" marg left big">Эффект заметен уже через 2 недели</h2>
 			<p>
-				Изменение прикуса и расположения зубов процесс кропотливый, но благодаря нашим технологиям уже спустя 2 недели
+				Изменение прикуса и расположения зубов процесс кропотливый, но благодаря нашим технологиям уже спустя 2
+				недели
 				вы
 				увидите первые результаты!
 			</p>
@@ -133,14 +111,16 @@
 					<div class="item">
 						<img src="img/sect3_3.svg" alt="">
 						<b>Удобство</b>
-						<p>Привыкание к элайнерам происходит в течение нескольких часов. Никаких нарушений дикции во время лечения.
+						<p>Привыкание к элайнерам происходит в течение нескольких часов. Никаких нарушений дикции во
+							время лечения.
 							Снять их вы
 							можете самостоятельно в любой момент.</p>
 					</div>
 					<div class="item">
 						<img src="img/sect3_4.svg" alt="">
 						<b>Гипоаллергенны</b>
-						<p>Hollywood smile изготовлены из специального медицинского материала, из которого делают капельницы,
+						<p>Hollywood smile изготовлены из специального медицинского материала, из которого делают
+							капельницы,
 							трубки, силиконы. Эти материалы не вызывают аллергию.</p>
 					</div>
 				</div>
@@ -150,18 +130,21 @@
 					<div class="item">
 						<img src="img/sect3_6.svg" alt="">
 						<b>Легкость в использовании</b>
-						<p>На время еды элайнеры снимаются. После - достаточно ополоснуть элайнеры в воде и почистить зубы.</p>
+						<p>На время еды элайнеры снимаются. После - достаточно ополоснуть элайнеры в воде и почистить
+							зубы.</p>
 					</div>
 					<div class="item">
 						<img src="img/sect3_7.svg" alt="">
 						<b>Безопасность</b>
-						<p>Выравнивание зубов элайнерами достигается путем мягкого давления. Они не повреждают эмаль и не травмируют
+						<p>Выравнивание зубов элайнерами достигается путем мягкого давления. Они не повреждают эмаль и
+							не травмируют
 							десны.</p>
 					</div>
 					<div class="item">
 						<img src="img/sect3_8.svg" alt="">
 						<b>Современная технология</b>
-						<p>Hollywood smile - современная медицинская технология, ставшая отличной альтернативой брекетам. Поэтому
+						<p>Hollywood smile - современная медицинская технология, ставшая отличной альтернативой
+							брекетам. Поэтому
 							для выравнивания
 							зубов большинство людей все чаще выбирают прозрачные капы.</p>
 					</div>
@@ -175,9 +158,11 @@
 			</h2>
 			<img src="img/sect4.png" alt="">
 			<p class="text">
-				Элайнеры – это эластичные прозрачные капы, накладываемые на весь зубной ряд. Они напоминают капы, используемые
+				Элайнеры – это эластичные прозрачные капы, накладываемые на весь зубной ряд. Они напоминают капы,
+				используемые
 				для
-				осветления зубов. <b>Их можно надеть и снять самостоятельно, это совершенно не больно.</b> В отличие от брекетов
+				осветления зубов. <b>Их можно надеть и снять самостоятельно, это совершенно не больно.</b> В отличие от
+				брекетов
 				их не нужно
 				носить постоянно. Элайнеры можно убирать перед приемом пищи или чисткой зубов.
 			</p>
@@ -188,7 +173,8 @@
 			<h2 class="right min">Как работают элайнеры Hollywood smile?</h2>
 			<br>
 			<p class="text">
-				Внутренняя поверхность элайнеров с точностью повторяет форму зубов, при этом учитывается и их микроподвижность.
+				Внутренняя поверхность элайнеров с точностью повторяет форму зубов, при этом учитывается и их
+				микроподвижность.
 				Действие
 				этих конструкций на зубы осуществляется очень мягко и незаметно.</p>
 			<iframe width="480" height="321" src="https://www.youtube.com/embed/WHFdGA3b3p4" frameborder="0"
@@ -202,7 +188,8 @@
 			<img src="img/sect6.png" alt="">
 			<br>
 			<p class="text">
-				Искривленный зубной ряд приводит не только к эстетическим недостаткам во внешности, но и сказывается на здоровье
+				Искривленный зубной ряд приводит не только к эстетическим недостаткам во внешности, но и сказывается на
+				здоровье
 				человека в целом. Повышенная нагрузка на одну из зон при жевании из-за неправильного прикуса приводит к
 				заболеваниям
 				пародонта, кариозным поражениям, эрозии зубной эмали.</p>
@@ -224,11 +211,14 @@
 					<img src="img/reviews1.jpg" alt="">
 
 					<p class="comment">
-						Добрый день, ношу элайнеры уже пару месяцев. Мои впечатления, привыкаешь быстро,за пару дней. Сначала
+						Добрый день, ношу элайнеры уже пару месяцев. Мои впечатления, привыкаешь быстро,за пару дней.
+						Сначала
 						непривычно, но
-						затем совершенно перестаешь замечать элайнеры. Дикция никак не изменилась. Решающим фактора для выбора была
+						затем совершенно перестаешь замечать элайнеры. Дикция никак не изменилась. Решающим фактора для
+						выбора была
 						невидимость
-						элайнеров. Ты фотографируешься — ничего не видно. Также легко чистить зубы. Уже виден результат. Рекомендую.
+						элайнеров. Ты фотографируешься — ничего не видно. Также легко чистить зубы. Уже виден результат.
+						Рекомендую.
 					</p>
 					<div class="bottom">
 						<span>03 May 2020 14:05</span>
@@ -248,7 +238,8 @@
 					</div>
 					<img src="img/reviews2.jpg" alt="">
 
-					<p class="comment">Меня не устраивало, как выдвинулись верхние передние зубы: выпирали заметно вперёд. Всего
+					<p class="comment">Меня не устраивало, как выдвинулись верхние передние зубы: выпирали заметно
+						вперёд. Всего
 						за 6 месяцев, прикус
 						исправился. Элайнеры незаметны и ухаживать за ними очень легко. Я очень довольна!</p>
 					<div class="bottom">
@@ -269,9 +260,11 @@
 					</div>
 					<img src="img/reviews3.jpg" alt="">
 
-					<p class="comment">Я хотела исправить прикус — получить эстетический эффект. Переживала, как вести переговоры
+					<p class="comment">Я хотела исправить прикус — получить эстетический эффект. Переживала, как вести
+						переговоры
 						с партнерами после установки
-						брекетов. Элайнеры стали идеальным выходом. Исправление прошло легко и без боли: отсутствует дискомфорт,
+						брекетов. Элайнеры стали идеальным выходом. Исправление прошло легко и без боли: отсутствует
+						дискомфорт,
 						который
 						ожидала. Рекомендую!</p>
 					<div class="bottom">
@@ -292,11 +285,14 @@
 					</div>
 					<img src="img/reviews4.jpg" alt="">
 
-					<p class="comment">Я не хотел носить брекеты: не нравилась сама идея ходить в них на совещания или переговоры.
+					<p class="comment">Я не хотел носить брекеты: не нравилась сама идея ходить в них на совещания или
+						переговоры.
 						Когда узнал, что существует
-						невидимая альтернатива, сразу же заказал. Перед встречей можно снять элайнеры и чувствовать себя комфортно.
+						невидимая альтернатива, сразу же заказал. Перед встречей можно снять элайнеры и чувствовать себя
+						комфортно.
 						Даже если не
-						снимаю, собеседники этого не замечают. Также нет дополнительных сложностей с чисткой зубов. Все проходит
+						снимаю, собеседники этого не замечают. Также нет дополнительных сложностей с чисткой зубов. Все
+						проходит
 						комфортно,
 						рекомендовал всем своим друзьям.</p>
 					<div class="bottom">
@@ -316,12 +312,18 @@
 			<br>
 			<br>
 			<div class="sect8__main">
-				<div class="item"><img src="img/sect7_1.png" alt=""><p>Оставьте заявку на сайте
-					</p></div>
-				<div class="item"><img src="img/sect7_2.png" alt=""><p>Дождитесь звонка менеджера
-					</p></div>
-				<div class="item"><img src="img/sect7_3.png" alt=""><p>Оплатите товар при получении</b></div>
-<div class="border"></div>
+				<div class="item"><img src="img/sect7_1.png" alt="">
+					<p>Оставьте заявку на сайте
+					</p>
+				</div>
+				<div class="item"><img src="img/sect7_2.png" alt="">
+					<p>Дождитесь звонка менеджера
+					</p>
+				</div>
+				<div class="item"><img src="img/sect7_3.png" alt="">
+					<p>Оплатите товар при получении</b>
+				</div>
+				<div class="border"></div>
 			</div>
 			<br>
 		</section>
@@ -338,13 +340,13 @@
 				</p>
 			</div>
 			<div class="price price--intro">
-		
+
 				<b class="old">98€</b>
 				<b class="nev">49€</b>
 				<p>Цена со скидкой</p>
-		
+
 			</div>
-		
+
 		</div>
 		<img src="img/intro__footer.png" alt="" style="margin-top: -1.86rem; position: relative; ">
 		<div class="intro__footer">
@@ -353,7 +355,7 @@
 					<p> <img src="img/intro__footer_list.svg" alt=""> Комфортные
 					</p>
 					<p> <img src="img/intro__footer_list.svg" alt="">Гипоаллергенные
-		
+
 					</p>
 					<p><img src="img/intro__footer_list.svg" alt=""> Быстрый результат
 					</p>
@@ -361,7 +363,7 @@
 				<img src="img/prod.png" alt="" style=" width: 2.2rem;">
 			</div>
 			<div class="timer ">
-		
+
 				<div class="timer__wrapper">
 					<div class="t-hour"></div>
 					<div class="separator">
