--- a/OFFERS-329/it/index.html
+++ b/OFFERS-329/it/index.html
@@ -231,7 +231,7 @@
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-raindrop"></i></div>
-                        <p class="circle-title"> resistente all'acqua <br> cipria</p>
+                        <p class="circle-title"> resistente all'acqua</p>
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-time"></i></div>
