--- a/OFFERS-348/al/index.html
+++ b/OFFERS-348/al/index.html
@@ -244,7 +244,7 @@
                     <input class="field" type="text" name="name" placeholder="Vendosni emrin" required>
                     <label for></label>
                     <input class="field" type="tel" name="phone" placeholder="Vendosni telefonin" required style="text-align: left;">
-                    <input class="button" value="ΠΑΡΑΓΓΕΙΛΤΕ ΤΩΡΑ" type="submit">
+                    <input class="button" value="POROSIT TANI" type="submit">
                     <div class="deadline_text"> Sasia e produkteve<br> është i kufizuar</div>
 		  <input name="offer_id" type="hidden" value="{offer_id}">
           <input name="geo" type="hidden" value>
